splitting expe-numeric and fixes

--- a/appendices.tex
+++ b/appendices.tex
@@ -74,7 +74,7 @@ $\rr$, $\brho$ 		& Radius vector\\
 $t$, $\tau$ 		& Time\\
 $\omega$ 	& Angular frequency\\
 $\kk$ 		& Wave vector in homogeneous medium\\
-$\KK$ 		& Wave vector in periodic medium\\
+$\KK$ 		& Bloch wave vector in periodic medium\\
 $\epsr$ 	& Relative dielectric permittivity\\
 $e$ 		& 2.718\ldots\\
 $\mathcal F$ 		& Fourier transform\\
