--- a/fdphd.bib
+++ b/fdphd.bib
@@ -456,7 +456,16 @@
 % Luukkonen, O.; Maslovski, Stanislav I. ; Tretyakov, S.A.
 /*}}}*/
 %  -- Current driven homogenisation --/*{{{*/
-% Markel 2013 CDH and effparam for finite samples
+@article{markel2013current,
+  title={Current-driven homogenization and effective medium parameters for finite samples},
+  author={Markel, Vadim A and Tsukerman, Igor},
+  journal={Physical Review B},
+  volume={88},
+  number={12},
+  pages={125131},
+  year={2013},
+  publisher={APS}
+}
 % Tsukerman 2011 EffParam of metamaterial Rigorous Whithey interpolation
 % Tsukerman 2011 Nonlocal homogenization metamaterials by 2interpolation
 /*}}}*/
@@ -515,6 +524,19 @@
 }
 /*}}}*/
 % == Sources metamaterial other ==
+% -- non-metamaterial, but related --/*{{{*/
+%% nearly 10^4 citations
+@article{veselago1968,
+  title={The Electrodynamics of Substances with Simultaneously Negative Values of $\varepsilon$ and $\mu$},
+  author={Veselago, Victor Georgievich},
+  journal={Physics-Uspekhi},
+  volume={10},
+  number={4},
+  pages={509--514},
+  year={1968},
+  publisher={Turpion Ltd}
+}
+/*}}}*/
 % -- Dielectric metamaterials --/*{{{*/
 @article{peng2007,
   title={Experimental observation of left-handed behavior in an array of standard dielectric resonators},
