--- a/t.tex
+++ b/t.tex
@@ -19,18 +19,27 @@
 \input{title.tex}
 \tableofcontents
 
+\chapter{Introduction}
+\input{intro.tex}
+
 \chapter{Theory}
 \input{theory.tex}
 
-\chapter{Experimental and numerical methods}
+\chapter{Numerical methods}
+\input{numeric.tex}
+
+\chapter{Experimental methods}
 \input{expe.tex}
 
 \chapter{Results}
 \input{result.tex}
-\label{endtext} 
+
+\chapter{Conclusion}
+\input{conclusion.tex}
 
 \chapter{Appendices}
-
 \input{appendices.tex}
+
+\label{endtext} 
 \printbibliography
 \end{document}
