removed dupes and started on THz technology

--- a/fdphd.bib
+++ b/fdphd.bib
@@ -451,6 +451,16 @@
   year={2008},
   publisher={APS}
 }
+%% TODO understand what this is about
+@article{hasar2009new,
+  title={A new microwave method based on transmission scattering parameter measurements for simultaneous broadband and stable permittivity and permeability determination},
+  author={Hasar, Ugur Cem},
+  journal={Progress In Electromagnetics Research},
+  volume={93},
+  pages={161--176},
+  year={2009},
+  publisher={EMW Publishing}
+}
 
 %% TODO:
 % Luukkonen, O.; Maslovski, Stanislav I. ; Tretyakov, S.A.
@@ -523,7 +533,7 @@
   publisher={APS}
 }
 /*}}}*/
-% -- fishnets and EOT --
+% -- fishnets and EOT --/*{{{*/
 @article{rockstuhl2008light,
   title={Light propagation in a fishnet metamaterial},
   author={Rockstuhl, Carsten and Menzel, Christoph and Paul, Thomas and Pertsch, Thomas and Lederer, Falk},
@@ -534,7 +544,7 @@
   year={2008},
   publisher={APS}
 }
-
+/*}}}*/
 % == Sources metamaterial other ==
 % -- non-metamaterial, but related --/*{{{*/
 %% nearly 10^4 citations
