--- a/numeric.tex
+++ b/numeric.tex
@@ -67,6 +67,24 @@ FDTD, being a time-domain method, requires the media to be described in a simila
 %			or exp(-i omega t)					-> FFT has to be conjugated (??)
 
 
+%A rough list of the most important phenomena follows. 
+%\begin{table}[ht]   \caption{}  \label{tb_phenomena} \centering 
+%\begin{tabular}{lcr}
+ %\toprule
+%Frequency $\omega_0/(2\pi)$         & Contribution $\Delta\varepsilon_r$ & Physical phenomenon	\\
+ %\hline
+%---									& 0--10000 &	& Rotation of polar molecules	\\
+%1 THz -- 30 THz						& & Vibration of atomic lattice	\\
+%200 THz - 1000 THz					& &	\\
+ %\bottomrule
+ %\end{tabular} \end{table}
+%\begin{enumerate}
+ %\item{In the low frequency and microwave range (up to 1 THz), rotation and reorganisation of polar molecules plays the major role in the medium polarizability. } 
+ %\item{Depending on the hardness and density of the medium, the lattice vibrates at frequencies between 1 and 30 THz.} 
+ %\item{The frequencies corresponding to  electron motions of solids are in near-infrared, optical or ultraviolet ranges (roughly 200-1000 THz).}
+ %\end{enumerate}
+%If the medium is conductive, 
+
 
 
 %}}}
@@ -559,7 +577,6 @@ It is also known that the phase of the reflectance depends on the surface termin
 %}}}
 
 \subsection{Current-driven homogenisation} % TODO
-
 % TODO read: http://scholar.google.cz/scholar?q=Tsukerman+2011++of+metamaterial+Rigorous+Whithey+interpolation&btnG=&hl=cs&as_sdt=0%2C5
 \begin{figure} \caption{img/cdh\_srrwire\_structure.pdf}  \centering \includegraphics[width=10cm]{img/cdh_srrwire_structure.pdf} \end{figure} \clearpage
 \begin{figure} \caption{img/cdh\_srrwirethick.pdf}  \centering \includegraphics[width=10cm]{img/cdh_srrwirethick.pdf} \end{figure} \clearpage
@@ -573,8 +590,10 @@ It is also known that the phase of the reflectance depends on the surface termin
 
 
 \cite{andryieuski2010homogenization} review of restoration methods ("standard method, field averaging, quasimode theory, wave phenomena"), presents the WPRM (Wave Propagation Retrieval Method)
+
 \cite{yang2010retrieving} also a single-interface problem
 
+\cite{2009new} - only transmission? examine
 
 /home/filip/PhD/Sources\_MM\_theory/120626\_Homogenisation\_approaches
 }
