--- a/t.tex
+++ b/t.tex
@@ -19,26 +19,26 @@
 \input{title.tex}
 \tableofcontents
 
-\chapter{Introduction}
-\input{intro.tex}
-
-\chapter{Theory}
-\input{theory.tex}
-
-\chapter{Numerical methods}
-\input{numeric.tex}
+%\chapter{Introduction}
+%\input{intro.tex}
+%
+%\chapter{Theory}
+%\input{theory.tex}
+%
+%\chapter{Numerical methods}
+%\input{numeric.tex}
 
 \chapter{Experimental methods}
 \input{expe.tex}
 
-\chapter{Results}
-\input{result.tex}
-
-\chapter{Conclusion}
-\input{conclusion.tex}
-
-\chapter{Appendices}
-\input{appendices.tex}
+%\chapter{Results}
+%\input{result.tex}
+%
+%\chapter{Conclusion}
+%\input{conclusion.tex}
+%
+%\chapter{Appendices}
+%\input{appendices.tex}
 
 \label{endtext} 
 \printbibliography
