--- a/result.tex
+++ b/result.tex
@@ -411,6 +411,7 @@ This structure lies at the boundary between the criteria for MMs and PhCs descri
 
 \section{A fishnet - metallic screen with holes} % references to ->
 %{{{
+\cite{yahiaoui2012metallo,rockstuhl2008light}
 \begin{figure} \caption{img/fishnet.pdf}  \centering \includegraphics[width=10cm]{img/fishnet.pdf} \end{figure} \clearpage
 %}}}
 
