basics of thz tech

--- a/expe.tex
+++ b/expe.tex
@@ -9,6 +9,7 @@ and it is also covered by theses from our group (\cite[pp. 2-30]{pashkin2004phd}
 
 \paragraph{Thermal emission in the THz range}
 The blackbody radiation is governed by the Planck law % TODO cite
+\begin{equation}I(f, T) = \frac{2 h}{\pi^2 c^2}\frac{f^3}{e^{\frac{\h f}{kT}}-1} \mathrm{\,W\,sr^{-1}\,Hz^{-1}\,m^{-2}}, \label{eq_planck}\end{equation}
 %$$ ,$$ TODO
 from which follows that the luminosity in the terahertz range is always very small: Integrating over frequencies from 300 GHz to 3 THz, one obtains roughly 0.6 W sr$^{-1}$ m$^{-2}$ at the room temperature.  Furthermore, all Planck oscillators in the THz range are already fully saturated:
 %  although the thermal energy at room temperature $T$ is significantly higher than the photon energy $hf$ at 1 THz
@@ -21,19 +22,33 @@ and therefore the power radiated in the THz range can not be significantly impro
 Whenever a beam of electrons (or possibly other charged particles) is subject to fast-enough acceleration at the picosecond scale, electromagnetic waves in the terahertz band are radiated. This is the case of magnetic deflection in particle accelerators, or the periodically-poled magnet, \textit{wiggler}, in the free electron laser. 
 Typically, such approach finds practical application in rather large-scale facilities. 
 
-Backward wave oscillators
+Gyrotron
+Backward wave oscillators (carcinotron)
+		M-type, the most powerful, (M-BWO) and the O-type (O-BWO). The O-type delivers typically power in the range of 1 mW at 1000 GHz to 50 mW at 200 GHz. 
 Free electron lasers and synchrotrons
+klystron.
+
 
 THz lasers
 p-Ge laser
 Quantum cascade lasers
 
 Tunable THz-wave parametric generation
+Optical rectification CW
+Quasi-Phase- Matching Crystals (Fanned-out PPLN)
+
+
+\paragraph{Pulsed THz sources}
 Optical rectification
 pulsed/cont
 
 Biased and unbiased photoconductive switches
 pulsed/cont
+
+Tilted Optical Pulses in Lithium
+Niobate
+
+\paragraph{Other THz sources}
 
 Coherent THz Radiation from Superconductors
 Cerenkov-like emission of THz radiation
