system in the THz source chapter

--- a/expe.tex
+++ b/expe.tex
@@ -18,32 +18,36 @@ and therefore the power radiated in the THz range can not be significantly impro
 
 
 \add{
-\paragraph{Coherent continuous THz sources}
-Whenever a beam of electrons (or possibly other charged particles) is subject to fast-enough acceleration at the picosecond scale, electromagnetic waves in the terahertz band are radiated. This is the case of magnetic deflection in particle accelerators, or the periodically-poled magnet, \textit{wiggler}, in the free electron laser. 
-Typically, such approach finds practical application in rather large-scale facilities. 
+Electromagnetic waves in the terahertz range are radiated when charged particles are subject to fast-enough acceleration at the picosecond scale. The processes may be sorted according to the medium in which this occurs and the origin of the force causing the acceleration.  % There are numerous ways to generate  
 
-Gyrotron
-Backward wave oscillators (carcinotron)
+\paragraph{Kinetic energy of electron beam}
+One class of devices uses the kinetic energy of an electron beam propagating in vacuum; the acceleration of the electrons is caused by transverse magnetic field. The simplest example is thecyclotron, where radiation is emitted from the bends in the particle path, or the free electron laser with a periodically-poled magnet called \textit{wiggler}. 
+Both types of devices provide excellent brightness and tunability, but they are rather large-scale facilities. 
+%In both devices, the electrons have to propagate in bunches. 
+
+Much smaller sources of radiation up to the THz range are the microwave vacuum tubes: \textit{gyrotron}, backward wave oscillators (BWO, also known as \textit{carcinotrons}) and \textit{klystron}.
+
+of the O- and M-type, 
 		M-type, the most powerful, (M-BWO) and the O-type (O-BWO). The O-type delivers typically power in the range of 1 mW at 1000 GHz to 50 mW at 200 GHz. 
-Free electron lasers and synchrotrons
-klystron.
 
+\paragraph{Conversion of electromagnetic wave}
+Another broad group of THz sources uses nonlinear response of matter to convert between the frequencies of radiation. In such a case, the energy is provided by incoming radiation. The nonlinearity may be introduced by a P-N transition of a microwave diode, or by intrinsic properties of the material.
 
-THz lasers
-p-Ge laser
-Quantum cascade lasers
+%Tunable THz-wave parametric generation
+%Optical rectification CW
+%Quasi-Phase- Matching Crystals (Fanned-out PPLN)
 
-Tunable THz-wave parametric generation
-Optical rectification CW
-Quasi-Phase- Matching Crystals (Fanned-out PPLN)
-
-
-\paragraph{Pulsed THz sources}
-Optical rectification
-pulsed/cont
-
+\paragraph{Macroscopic electric charge}
 Biased and unbiased photoconductive switches
 pulsed/cont
+
+\paragraph{Transition between quantum states}
+%THz lasers
+%p-Ge laser
+%Quantum cascade lasers
+
+\paragraph{Specifics of pulsed THz sources}
+
 
 Tilted Optical Pulses in Lithium
 Niobate
