classification of thz sources

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -25,6 +25,10 @@ All referred numerical methods, FDTD, PWEM and TMM, were tested also to give com
 Some of the numerical simulations are also planned to be tested on the experimental basis. One of the proposed structures is an array of spheres embedded in a double metallic mesh. This structure is predicted to exhibit negative refraction in a narrow transmission band, and moreover, if the spheres are made of strontium titanate, which is a high-permittivity ferroelectric, the frequency of this band can be tuned by temperature or electric voltage between the metallisation. Other experimental work will focus on extraordinary transmission in metallic fishnets and tunable planar metamaterials. In all cases the experiments will be supported by thorough numerical simulations and possibly also by analytical models.
 
 
+\paragraph{TiO$_{2}$ resoantors}\add{Owing to the homogeneous broadening of the resonator resonance, caused by intrinsic losses of TiO$_{2}$, further sieving appears to lack any purpose. Not only this project broadens the numerous group of technically successful research projects pointed in utterly wrong direction, it also classifies into the lamentable subgroup of effort that could be entirely avoided if open and honest scientific discussion took place about the inherent problems. In this case, particularly, in all related papers it should be openly stated, that the dielectric losses of TiO2 prevent building any applicable volume metamaterial, no matter how accurately the resonators are prepared.}
+
+
+
 % == History ==    artificial dielectrics, which were already designed in the 1940s for microwave frequencies -- J. Brown, “Artificial dielectrics,” Prog. Dielectr. 2, 193–225 (1960)
 
 
