--- a/numeric.tex
+++ b/numeric.tex
@@ -563,6 +563,8 @@ It is also known that the phase of the reflectance depends on the surface termin
 
 \cite{menzel2008retrieving} s-param methdo extended under oblique incidence
 
+% TODO add    A review of the scattering parameter extraction method with clarification of ambiguity issues in relation to metamaterial homogenization
+
 }
 
 %}}}
