--- a/expe.tex
+++ b/expe.tex
@@ -7,31 +7,24 @@ The electromagnetic waves in the terahertz range, roughly between 100 GHz and 10
 The following paragraphs show why thermal sources are not applicable to the THz range, and briefly list the most prominent sources of THz radiation that are used in research or technology. A brief overview of THz technology follows. There is a great number of literature that covers this topic in depth \cite[pp. 155-158]{lee2008book}, % TODO add
 and it is also covered by theses from our group (\cite[pp. 2-30]{pashkin2004phd}, \cite[pp. 19-25]{nemec2006}, \cite[pp. 7-26]{fekete2008phd}, \cite[pp. 11-21]{sibik2010dp}, \cite[pp. 31-45]{yahiaoui2011phd}, \cite[pp. 33-38]{mics2012phd}, \cite[pp. 25-33]{skoromets2013phd}, etc.).
 
-\paragraph{Thermal emission in the THz range}
-The blackbody radiation is governed by the Planck law % TODO cite
-\begin{equation}I(f, T) = \frac{2 h}{\pi^2 c^2}\frac{f^3}{e^{\frac{\h f}{kT}}-1} \mathrm{\,W\,sr^{-1}\,Hz^{-1}\,m^{-2}}, \label{eq_planck}\end{equation}
-%$$ ,$$ TODO
-from which follows that the luminosity in the terahertz range is always very small: Integrating over frequencies from 300 GHz to 3 THz, one obtains roughly 0.6 W sr$^{-1}$ m$^{-2}$ at the room temperature.  Furthermore, all Planck oscillators in the THz range are already fully saturated:
-%  although the thermal energy at room temperature $T$ is significantly higher than the photon energy $hf$ at 1 THz
-$$k_B T \approx 1.38\cdot 10^{-26} \text{ J K}^{-1} \cdot 300 \text{ K~} \approx 25.8 \text{ meV } \gg h f \approx 4.13 \text{ meV}), $$
-and therefore the power radiated in the THz range can not be significantly improved by increasing the blackbody temperature. Particularly, it can be shown that in this part of the spectrum the luminosity scales only linearly with the temperature $T$; whereas the total power scales as $T^{4}$ (Stefan-Bolzmann law). Sources other than thermal have to be used.
-
 
 \add{
-Electromagnetic waves in the terahertz range are radiated when charged particles are subject to fast-enough acceleration at the picosecond scale. The processes may be sorted according to the medium in which this occurs and the origin of the force causing the acceleration.  % There are numerous ways to generate  
+Electromagnetic waves in the terahertz range are radiated when charged particles are subject to fast-enough acceleration at the picosecond scale. The processes may be sorted with regards to the medium in which this occurs and the origin of the force causing the acceleration.  % There are numerous ways to generate  
 
 \paragraph{Kinetic energy of electron beam}
-One class of devices uses the kinetic energy of an electron beam propagating in vacuum; the acceleration of the electrons is caused by transverse magnetic field. The simplest example is thecyclotron, where radiation is emitted from the bends in the particle path, or the free electron laser with a periodically-poled magnet called \textit{wiggler}. 
+One class of devices uses the kinetic energy of an electron beam propagating in vacuum; the acceleration of the electrons is caused by transverse magnetic field. The simplest example is the cyclotron, where coherent THz radiation is emitted when a short bunch of electrons is passing through the bends in the particle path. Another example is the free electron laser with the electron bunches passing through a periodically-poled magnet called \textit{wiggler}. 
 Both types of devices provide excellent brightness and tunability, but they are rather large-scale facilities. 
 %In both devices, the electrons have to propagate in bunches. 
 
-Much smaller sources of radiation up to the THz range are the microwave vacuum tubes: \textit{gyrotron}, backward wave oscillators (BWO, also known as \textit{carcinotrons}) and \textit{klystron}.
+Smaller sources of radiation up to the THz range are the microwave vacuum tubes: \textit{gyrotron}, backward wave oscillators (BWO, also known as \textit{carcinotrons}), and \textit{klystron}.
 
 of the O- and M-type, 
 		M-type, the most powerful, (M-BWO) and the O-type (O-BWO). The O-type delivers typically power in the range of 1 mW at 1000 GHz to 50 mW at 200 GHz. 
 
 \paragraph{Conversion of electromagnetic wave}
 Another broad group of THz sources uses nonlinear response of matter to convert between the frequencies of radiation. In such a case, the energy is provided by incoming radiation. The nonlinearity may be introduced by a P-N transition of a microwave diode, or by intrinsic properties of the material.
+
+%The frequency range of diode operation is limited
 
 %Tunable THz-wave parametric generation
 %Optical rectification CW
@@ -59,7 +52,20 @@ Cerenkov-like emission of THz radiation
 
 Terahertz radiation from shocked materials
 
+\paragraph{Thermal emission in the THz range}
+The blackbody radiation is governed by the Planck law % TODO cite
+\begin{equation}I(f, T) = \frac{2 h}{\pi^2 c^2}\frac{f^3}{e^{\frac{\h f}{kT}}-1} \mathrm{\,W\,sr^{-1}\,Hz^{-1}\,m^{-2}}, \label{eq_planck}\end{equation}
+%$$ ,$$ TODO
+from which follows that the luminosity in the terahertz range is always very small: Integrating over frequencies from 300 GHz to 3 THz, one obtains roughly 0.6 W sr$^{-1}$ m$^{-2}$ at the room temperature.  Furthermore, all Planck oscillators in the THz range are already fully saturated:
+%  although the thermal energy at room temperature $T$ is significantly higher than the photon energy $hf$ at 1 THz
+$$k_B T \approx 1.38\cdot 10^{-26} \text{ J K}^{-1} \cdot 300 \text{ K~} \approx 25.8 \text{ meV } \gg h f \approx 4.13 \text{ meV}), $$
+and therefore the power radiated in the THz range can not be significantly improved by increasing the blackbody temperature. Particularly, it can be shown that in this part of the spectrum the luminosity scales only linearly with the temperature $T$; whereas the total power scales as $T^{4}$ (Stefan-Bolzmann law). Sources other than thermal have to be used.
+
+
+
+
 \paragraph{Terahertz detectors}
+The detectors of radiation 
 1.3.1 Photoconductive receiving antennas . . . . . . .
 1.3.2 Electrooptic sampling . . . . . . . . . . . . . . .
 1.3.3 Magnetooptic sampling . . . . . . . . . . . . . .
@@ -114,8 +120,13 @@ from the numerically predicted results, which were moreover sensitive to subtle 
  \end{enumerate}
 %}}}
 \section{Sample preparation} 
-\subsection{Preparation of dielectric and bars}
-In the following section, the properties of periodic dielectric rods are discussed. 
+Several types of structures studied in this thesis were experimentally measured to compare the results with the simulations. The samples were manufactured by our group or by one of the collaborating groups by different techniques which are discussed here. 
+\subsection{Cutting of dielectric bars}
+Dielectric or metallic structures can be made by micromachining a thin polished slab of the given material. Metamaterials designed to operate around 1 THz, which corresponds to the free-space wavelength of 0.3 mm, have their unit cells of a similar size or less, and the finest features are usually an order of magnitude smaller. 
+
+One thus faces a technologically challenging task of writing a structure with 10--30 $\upmu$m resolution into a slab of a similar thickness. If the slab is made of a dielectric, it is usually very brittle and sensitive to breaking due to thermal stresses. Metallic slab is  
+% In the following section, the properties of periodic dielectric rods are discussed. 
+
 A similar sample used in experiment consisted of bars from strontium titanate (SrTiO$_{3}$) with  rectangular cross-section (see Fig. \ref{fg_ebars_exp}). These bars were fabricated by femtosecond laser micro-machining from a thin slab of the dielectric \cite{yahiaoui2011tunable}.
 % TODO
 \subsection{Fabrication and sieving of dielectric sphere samples}
@@ -214,6 +225,4 @@ To achieve the required precision of sieving, we fabricated the sieves by femtos
 %These sieves then were employed in a device that subjected the microsphere sample to acoustic vibrations, improving the speed of the demanding sieving process to acceptable level (Fig. \ref{fg_microfab}b,c).
 \add{ TODO}
 
-
-\add{Owing to the homogeneous broadening of the resonator resonance, caused by intrinsic losses of TiO$_{2}$, further sieving appears to lack any purpose. Not only this project broadens the numerous group of technically successful research projects pointed in utterly wrong direction, it also classifies into the lamentable subgroup of effort that could be entirely avoided if open and honest scientific discussion took place about the inherent problems. In this case, particularly, in all related papers it should be openly stated, that the dielectric losses of TiO2 prevent building any applicable volume metamaterial, no matter how accurately the resonators are prepared.}
 
